--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <!--    定义一个小文字样式-->
+    <style name="TextSmall">
+        <item name="android:textColor">@color/light_grey</item>
+        <item name="android:textSize">@dimen/text_small</item>
+    </style>
 </resources>
