--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,9 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
-
+    <!--全局背景-->
+    <color name="background">@android:color/white</color>
     <!--亮一点的灰色-->
     <color name="light_grey">#aaaaaa</color>
+
 </resources>
