--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,7 @@
     <dimen name="text_small">12sp</dimen>
     <!--    大间隙-->
     <dimen name="padding_large">20dp</dimen>
+
+    <dimen name="button_width_large">130dp</dimen>
+    <dimen name="button_height">40dp</dimen>
 </resources>
