3517 Add button radius

--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -27,6 +27,7 @@
 
         <!--        登录注册按钮-->
         <Button
+            android:background="@drawable/shape_color_primary"
             android:layout_width="@dimen/button_width_large"
             android:layout_height="@dimen/button_height"
             android:text="@string/login_or_register" />
