--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
 
     <dimen name="button_width_large">130dp</dimen>
     <dimen name="button_height">40dp</dimen>
+    <!--    圆角相关-->
+    <dimen name="radius_button">20dp</dimen>
 </resources>
