--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,13 @@
     <!--标题栏颜色-->
     <color name="colorPrimaryDark">#dd0000</color>
     <color name="colorAccent">#dd0000</color>
+
+    <!--常用颜色-->
+    <color name="white">@android:color/white</color>
+
     <!--全局背景-->
-    <color name="background">@android:color/white</color>
+    <color name="background">@color/white</color>
+
     <!--亮一点的灰色-->
     <color name="light_grey">#aaaaaa</color>
 </resources>
