--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -27,6 +27,7 @@
 
         <!--        登录注册按钮-->
         <Button
+            android:textColor="@drawable/selector_text_color_primary_reverse"
             android:layout_width="@dimen/button_width_large"
             android:layout_height="@dimen/button_height"
             android:background="@drawable/selector_color_primary"
@@ -40,6 +41,7 @@
 
         <!--        立即体验按钮-->
         <Button
+            android:textColor="@drawable/selector_text_color_primary"
             android:layout_width="@dimen/button_width_large"
             android:layout_height="@dimen/button_height"
             android:background="@drawable/selector_color_primary_reverse"
