--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -27,11 +27,12 @@
 
         <!--        登录注册按钮-->
         <Button
-            android:textColor="@drawable/selector_text_color_primary_reverse"
+            android:id="@+id/bt_login_or_register"
             android:layout_width="@dimen/button_width_large"
             android:layout_height="@dimen/button_height"
             android:background="@drawable/selector_color_primary"
-            android:text="@string/login_or_register" />
+            android:text="@string/login_or_register"
+            android:textColor="@drawable/selector_text_color_primary_reverse" />
 
         <!--    占位控件-->
         <View
@@ -41,11 +42,12 @@
 
         <!--        立即体验按钮-->
         <Button
-            android:textColor="@drawable/selector_text_color_primary"
+            android:id="@+id/bt_enter"
             android:layout_width="@dimen/button_width_large"
             android:layout_height="@dimen/button_height"
             android:background="@drawable/selector_color_primary_reverse"
-            android:text="立即体验" />
+            android:text="立即体验"
+            android:textColor="@drawable/selector_text_color_primary" />
 
         <!--    占位控件-->
         <View
