3545 Add guide fragement

--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -7,10 +7,11 @@
 
 
     <!--    占位控件-->
-    <View
+    <FrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"></FrameLayout>
 
     <!--    按钮容器-->
     <LinearLayout
