--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:ixuea="http://schemas.android.com/apk/res-auto"
     android:background="@color/background"
     android:orientation="vertical">
 
@@ -20,6 +21,15 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
+
+    <!--    指示器-->
+    <!--    如果使用第三方控件 引用需要用app:-->
+    <me.relex.circleindicator.CircleIndicator
+        android:id="@+id/ci"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/guide_indicator_height"
+        ixuea:ci_drawable="@drawable/shape_circle_color_primary"
+        ixuea:ci_drawable_unselected="@drawable/shape_circle_light_grey"/>
 
     <!--    按钮容器-->
     <LinearLayout
