--- a/app/src/main/res/layout/activity_login_or_register.xml
+++ b/app/src/main/res/layout/activity_login_or_register.xml
@@ -43,6 +43,7 @@
             android:orientation="vertical">
             <!--    登录按钮-->
             <Button
+                android:id="@+id/bt_login"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/button_height"
                 android:background="@drawable/selector_color_primary_reverse"
@@ -50,6 +51,7 @@
                 android:textColor="@drawable/selector_text_color_primary" />
             <!--    注册按钮-->
             <Button
+                android:id="@+id/bt_register"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/button_height"
                 android:layout_marginTop="@dimen/padding_large"
