3563 Add tool bar

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,11 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <!--    toolbar样式-->
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <!--    去除ActionBar-->
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
     <!--    定义一个小文字样式-->
     <style name="TextSmall">
         <item name="android:textColor">@color/light_grey</item>
