3566 Add login layout

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,13 +6,45 @@
     android:layout_height="match_parent"
     tools:context=".activity.LoginActivity">
 
-    <include layout="@layout/tool_bar"/>
+    <include layout="@layout/tool_bar" />
     <!--内容部分
     layout_behavior:用来控制内容区域-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="@dimen/activity_margin"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+        <!--这里不能使用maxLength限制最长字符数
+             因为这里用户名还有邮箱-->
+        <EditText
+            style="@style/EditText"
+            android:hint="@string/enter_username"
+            android:inputType="textEmailAddress" />
+
+        <!--        密码输入框-->
+        <EditText
+            style="@style/EditText"
+            android:hint="@string/enter_password"
+            android:inputType="textPassword" />
+
+        <!--                登录按钮-->
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/button_height"
+            android:layout_marginTop="@dimen/padding_large"
+            android:background="@drawable/selector_color_primary"
+            android:text="@string/login"
+            android:textColor="@drawable/selector_text_color_primary_reverse" />
+        <!--        忘记密码按钮-->
+        <Button
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/button_height"
+            android:layout_marginTop="@dimen/padding_large"
+            android:background="@color/transparent"
+            android:text="@string/forget_password"
+            android:textColor="@color/light_grey" />
     </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
