--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingDefaultResource">
+
+    <!--    Activity边距-->
+    <dimen name="activity_margin" >16dp</dimen>
     <!--    小文本-->
     <dimen name="text_small">12sp</dimen>
+    <!--    中间隙-->
+    <dimen name="padding_meddle">10dp</dimen>
     <!--    大间隙-->
     <dimen name="padding_large">20dp</dimen>
+
 
     <dimen name="button_width_large">130dp</dimen>
     <dimen name="button_height">40dp</dimen>
@@ -15,4 +21,5 @@
     <dimen name="guide_indicator_height">40dp</dimen>
     <!--    登录注册相关-->
     <dimen name="login_logo_height">80dp</dimen>
+
 </resources>
