--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,4 +23,20 @@
         <item name="android:textColor">@color/light_grey</item>
         <item name="android:textSize">@dimen/text_small</item>
     </style>
+
+    <!--    登录，注册界面输入框样式-->
+    <style name="EditText">
+        <!--    图标到内容的间距-->
+        <item name="android:drawablePadding">@dimen/padding_meddle</item>
+        <!--    左侧图标-->
+        <item name="android:drawableLeft">@drawable/ic_phone</item>
+        <item name="android:paddingTop">@dimen/padding_large</item>
+        <item name="android:paddingBottom">@dimen/padding_large</item>
+        <!--    最大显示1行-->
+        <item name="android:lines">1</item>
+<!--        <item name="android:layout_marginTop">@dimen/padding_meddle</item>-->
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+
+    </style>
 </resources>
