--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,13 +30,14 @@
         <item name="android:drawablePadding">@dimen/padding_meddle</item>
         <!--    左侧图标-->
         <item name="android:drawableLeft">@drawable/ic_phone</item>
-        <item name="android:paddingTop">@dimen/padding_large</item>
-        <item name="android:paddingBottom">@dimen/padding_large</item>
+        <item name="android:paddingTop">@dimen/padding_meddle</item>
+        <item name="android:paddingBottom">@dimen/padding_meddle</item>
         <!--    最大显示1行-->
         <item name="android:lines">1</item>
-<!--        <item name="android:layout_marginTop">@dimen/padding_meddle</item>-->
+        <item name="android:layout_marginTop">@dimen/padding_meddle</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/selector_edit_text</item>
 
     </style>
 </resources>
